<resources>
    <string name="app_name">NanoApps</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">LOGIN</string>
    <string name="register_button">REGISTER</string>
    <string name="login_back">LOGIN</string>
    <string name="already_registered">Already registered?</string>
    <string name="log_out">Log Out</string>
    <string name="my_balance">My balance</string>
    <string name="nanos">Coins</string>
    <string name="my_account">My account</string>
    <string name="get_currency">Recharge</string>
    <string name="transfer_funds">Pay</string>
    <string name="claim_transactions">Pending transactions</string>
    <string name="check_out">Check out</string>
    <string name="scan_code">Scan code</string>
    <string name="enter_username">Enter username</string>
    <string name="value">Value...</string>
    <string name="ok">Ok</string>
    <string name="scan_qr_code">Scan Qr Code</string>
    <string name="pay">Pay</string>
    <string name="proceed">Proceed</string>
</resources>