<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal" >

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginTop="90dp"
        android:drawableStart="@drawable/ic_username"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textSize="14sp" />
    <EditText
        android:id="@+id/enter_password"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:hint="@string/password"/>
    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:hint="@string/confirm_password"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/register_button"/>

    <LinearLayout
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#3F445A"
            android:text="@string/already_registered"/>
        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textColor="#BA262F39"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/login_back"/>

    </LinearLayout>


</LinearLayout>