<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UserActivity"
    android:orientation="vertical"
    android:gravity="left"
    android:background="#FDE6EFEE">

    <Button
        android:id="@+id/log_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="end"
        android:backgroundTint="#495A7E"
        android:text="@string/log_out"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/my_balance"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="55dp">

        <TextView
            android:id="@+id/balance_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:textSize="40sp"
            android:textColor="#E10A0A" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="italic"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="15dp"
            android:textSize="35sp"
            android:textColor="#E10A0A"
            android:text="@string/nanos"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="50dp">

        <TextView
            android:id="@+id/my_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:text="@string/my_account"/>
        <TextView
            android:id="@+id/get_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:text="@string/get_currency"/>
        <TextView
            android:id="@+id/transfer_funds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:text="@string/transfer_funds"/>
        <TextView
            android:id="@+id/claim_transactions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:text="@string/claim_transactions"/>
    </LinearLayout>

</LinearLayout>