<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.rechargeActivity">

    <Button
        android:id="@+id/log_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="300dp"
        android:layout_gravity="end"
        android:backgroundTint="#495A7E"
        android:text="@string/log_out"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="130dp">

        <EditText
            android:layout_width="117dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:background="#fff"
            android:textColor="#CD051C49"
            android:textSize="22sp"
            android:hint="Value" />

        <Button
            android:id="@+id/check_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#495A7E"
            android:text="@string/check_out" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="300dp">

        <TextView
            android:id="@+id/my_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:text="@string/my_account"/>
        <TextView
            android:id="@+id/get_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:text="@string/get_currency"/>
        <TextView
            android:id="@+id/pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:text="@string/transfer_funds"/>
        <TextView
            android:id="@+id/claim_transactions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:text="@string/claim_transactions"/>
    </LinearLayout>


</RelativeLayout>