<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".view.transferFundsActivity">


    <Button
        android:id="@+id/log_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="300dp"
        android:layout_gravity="end"
        android:backgroundTint="#495A7E"
        android:text="@string/log_out"/>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp">

        <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:background="#fff"
            android:textColor="#CD051C49"
            android:textSize="22sp"
            android:hint="@string/enter_username" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:backgroundTint="#495A7E"
            android:text="@string/search_user" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="30dp">

        <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:background="#fff"
            android:textColor="#CD051C49"
            android:textSize="22sp"
            android:hint="Enter Value" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:backgroundTint="#495A7E"
            android:text="@string/check_out" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="300dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/my_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/my_account"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/get_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/get_currency"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/claim_transactions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/claim_transactions"
            android:textSize="20sp" />
    </LinearLayout>


</RelativeLayout>